--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>canvas</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script src="/index.js"></script>
+
+<div class="btn-group">
+    <button id="pen-btn">pen</button>
+    <button id="erase-btn">eraser</button>
+    <button id="clear-btn">clear</button>
+</div>
+    
+    <script src="index.js"></script>
 </body>
 </html>
